--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(DATA_STRUCTURE)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(DATA_STRUCTURE ARRAY-CIRCULAR/mainCircularArray.cpp ARRAY-CIRCULAR/CircularArray.h  ARRAY-CIRCULAR/tester.h)
+add_executable(DATA_STRUCTURE  LINKED-LISTS/mainForwardList.cpp LINKED-LISTS/forwardList.h LINKED-LISTS/List.h )
