lisked list end

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.25)
 project(DATA_STRUCTURE)
 
 set(CMAKE_CXX_STANDARD 17)
-
-add_executable(DATA_STRUCTURE  LINKED-LISTS/mainForwardList.cpp LINKED-LISTS/forwardList.h LINKED-LISTS/List.h )
+#
+#add_executable(DATA_STRUCTURE  LINKED-LISTS/mainForwardList.cpp LINKED-LISTS/forwardList.h LINKED-LISTS/List.h )
+add_executable(DATA_STRUCTURE  main.cpp )
